unpackaged/objects/OpenOrderLine__c.object
<CustomObject>
  <description>Standalone object. Populated by integration.
Object Owners : Chris Payne, Claus Wenkel, Jörg Walter, Yauheni Frenkel</description>
  <fields>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Open Order Lines</relationshipLabel>
    <relationshipName>Open_Order_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>CompanyCode__c</fullName>
    <label>Company Code</label>
    <length>10</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>CustomerMasterUniqueKey__c</fullName>
    <label>Customer Master UniqueKey</label>
    <length>30</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>CustomerNo__c</fullName>
    <label>Customer No</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>CustomerOrderLineNo__c</fullName>
    <label>Customer Order Line No</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>CustomerOrderNo__c</fullName>
    <label>Customer Order No</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>CustomerOrderTypeName__c</fullName>
    <label>Customer Order Type Name</label>
    <length>30</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>CustomerOrderType__c</fullName>
    <label>Customer Order Type</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>CustomerSalesGroup__c</fullName>
    <label>Customer Sales Group</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>DelValueNotInvoiced_Inv__c</fullName>
    <label>Del Value Not Invoiced Inv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>DelValueNotInvoiced__c</fullName>
    <label>Del Value Not Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>DeliveredMfgQty__c</fullName>
    <label>Delivered Mfg Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>DeliveredQuantity__c</fullName>
    <label>Delivered Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>EntityCode__c</fullName>
    <label>Entity Code</label>
    <length>10</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>GDWUniqueKey__c</fullName>
    <externalId>true</externalId>
    <label>GDW Unique Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>GlobalItemMasterUniqueKey__c</fullName>
    <label>Global Item Master UniqueKey</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>GlobalSKU__c</fullName>
    <label>Global SKU</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>InvoiceCurrency__c</fullName>
    <label>Invoice Currency</label>
    <length>3</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>LoadTimeStamp__c</fullName>
    <label>Load Time Stamp</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>LocalItemMasterUniqueKey__c</fullName>
    <label>Local Item Master UniqueKey</label>
    <length>42</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>LocalSKU__c</fullName>
    <label>Local SKU</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>OrderCurrency__c</fullName>
    <label>Order Currency</label>
    <length>3</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>OrderEntryDate__c</fullName>
    <label>Order Entry Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>OrderValueNotInvoiced_Inv__c</fullName>
    <label>Order Value Not Invoiced Inv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>OrderValueNotInvoiced__c</fullName>
    <label>Order Value Not Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>OrderedMfgQty__c</fullName>
    <label>Ordered Mfg Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>OrderedQuantity__c</fullName>
    <label>Ordered Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>PatientCaseId__c</fullName>
    <label>Patient Case Id</label>
    <length>25</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>PracticeId__c</fullName>
    <label>Practice Id</label>
    <length>25</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>RemainingMfgQty__c</fullName>
    <label>Remaining Mfg Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>RemainingQuantity__c</fullName>
    <label>Remaining Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>SalesOrderStatus__c</fullName>
    <label>Sales Order Status</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>SalesOrigin__c</fullName>
    <label>Sales Origin</label>
    <length>25</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SalesTypeCode__c</fullName>
    <label>Sales Type Code</label>
    <length>10</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>ShipDateConfirmed__c</fullName>
    <label>Ship Date Confirmed</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>ShipDateRequested__c</fullName>
    <label>Ship Date Requested</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>ShipDate__c</fullName>
    <label>Ship Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>ShipToCountry__c</fullName>
    <label>Ship To Country</label>
    <length>3</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SiteId__c</fullName>
    <label>Site Id</label>
    <length>25</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SourceId__c</fullName>
    <label>Source Id</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <label>Open Order Line</label>
  <nameField>
    <displayFormat>OOL{0000000000}</displayFormat>
    <label>OpenOrderLine Id</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Open Order Lines</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>